changed file paths to variables

--- a/Pandas/PandasTutorial.ipynb
+++ b/Pandas/PandasTutorial.ipynb
@@ -139,7 +139,62 @@
    "source": [
     "import pandas as pd\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = \"all\""
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/rayirth.soni/Code/Personal/EDA Practise/Modules-Tutorials/Pandas'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cwd = os.getcwd()\n",
+    "cwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/rayirth.soni/Code/Personal/EDA Practise/Modules-Tutorials/Pandas/survey_results_public.csv'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/rayirth.soni/Code/Personal/EDA Practise/Modules-Tutorials/Pandas/survey_results_schema.csv'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "survey_results_public_path = os.path.join(cwd,'survey_results_public.csv')\n",
+    "survey_results_public_path\n",
+    "survey_results_schema_path = os.path.join(cwd,'survey_results_schema.csv')\n",
+    "survey_results_schema_path"
    ]
   },
   {
@@ -660,7 +715,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_public.csv')\n",
+    "df = pd.read_csv(survey_results_public_path)\n",
     "df"
    ]
   },
@@ -1797,7 +1852,7 @@
     }
    ],
    "source": [
-    "schema_df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_schema.csv')\n",
+    "schema_df = pd.read_csv(survey_results_schema_path)\n",
     "schema_df"
    ]
   },
@@ -5277,8 +5332,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_public.csv')\n",
-    "schema_df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_schema.csv')"
+    "df = pd.read_csv(survey_results_public_path)\n",
+    "schema_df = pd.read_csv(survey_results_schema_path)"
    ]
   },
   {
@@ -7496,7 +7551,7 @@
    "outputs": [],
    "source": [
     " # if you want to change index while reading only or if you know what column is to be set as index\n",
-    "df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_public.csv',index_col='ResponseId')\n",
+    "df = pd.read_csv(survey_results_public_path,index_col='ResponseId')\n",
     "schema_df = pd.read_csv(r\"C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_schema.csv\",index_col='qname')"
    ]
   },
@@ -14362,8 +14417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_public.csv',index_col = \"ResponseId\")\n",
-    "schema_df = pd.read_csv (r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_schema.csv', index_col = \"qname\")"
+    "df = pd.read_csv(survey_results_public_path,index_col = \"ResponseId\")\n",
+    "schema_df = pd.read_csv (survey_results_schema_path, index_col = \"qname\")"
    ]
   },
   {
@@ -19798,8 +19853,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_public.csv',index_col='ResponseId')\n",
-    "schema_df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_schema.csv',index_col='qid')"
+    "df = pd.read_csv(survey_results_public_path,index_col='ResponseId')\n",
+    "schema_df = pd.read_csv(survey_results_schema_path,index_col='qid')"
    ]
   },
   {
@@ -23882,8 +23937,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_public.csv')\n",
-    "schema_df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_schema.csv')"
+    "df = pd.read_csv(survey_results_public_path)\n",
+    "schema_df = pd.read_csv(survey_results_schema_path)"
    ]
   },
   {
@@ -27196,8 +27251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_public.csv',index_col='ResponseId')\n",
-    "schema_df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_schema.csv',index_col='qid')"
+    "df = pd.read_csv(survey_results_public_path,index_col='ResponseId')\n",
+    "schema_df = pd.read_csv(survey_results_schema_path,index_col='qid')"
    ]
   },
   {
@@ -37145,8 +37200,8 @@
    "source": [
     "na_vals = ['Missing','NA']\n",
     "# na_values will change it to NaN\n",
-    "df = pd.read_csv(r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_public.csv',index_col = \"ResponseId\",na_values=na_vals)\n",
-    "schema_df = pd.read_csv (r'C:\\Users\\rayir\\Desktop\\computer programs\\survey_results_schema.csv', index_col = \"qname\")\n",
+    "df = pd.read_csv(survey_results_public_path,index_col = \"ResponseId\",na_values=na_vals)\n",
+    "schema_df = pd.read_csv (survey_results_schema_path, index_col = \"qname\")\n",
     "pd.set_option('display.max_rows',85)\n",
     "pd.set_option('display.max_columns',85)\n",
     "df_1 = df.copy()\n",
@@ -37661,7 +37716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4,
   "vscode": {
